--- a/styles.css
+++ b/styles.css
@@ -42,11 +42,10 @@ body {
 }
 
 
-/* Fixed Navigation Bar Below Header */
 .navigationbar {
-    background-color: #2c3e50; /* Slightly different color for visibility */
+    background-color: #2c3e50; 
     position: fixed;
-    top: 170px; /* Adjusted to match header height */
+    top: 170px;
     left: 0;
     width: 100%;
     color: white;
@@ -54,9 +53,10 @@ body {
     text-align: center;
     font-size: 18px;
     z-index: 500;
+   display: flex;
+    flex-wrap: wrap;
 }
 
-/* Navigation Menu */
 nav ul {
     list-style-type: none;
     background-color: #2c3e50;
@@ -86,14 +86,12 @@ nav ul li a {
     margin-left: auto;
 }
 
-/* Section Styling */
 section {
-    scroll-margin-top: 195px; /* Adjust based on navbar height */
+    scroll-margin-top: 195px; 
     padding: 20px;
 
 }
 
-/* Portfolio Grid Layout */
 .portfolio-grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
@@ -122,4 +120,30 @@ section {
 canvas {
     margin: 0 auto;
     display: block;
+}
+
+@media screen and (max-width: 768px) {
+    .navbar ul {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .navbar ul li {
+        margin: 10px 0;
+    }
+
+    .portfolio-grid {
+        grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    }
+}
+
+@media screen and (max-width: 360px) {
+    .hero {
+        font-size: 18px;
+        padding: 10px;
+    }
+
+    .portfolio-grid {
+        grid-template-columns: 1fr; 
+    }
 }
