--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,16 @@
-/* General Body Styling */
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    padding-top: 100px; /* Space for fixed header & navbar */
-    width: 100%;
+    padding-top: 100px; 
+   
     height: 100%;
 }
 
-/* Fixed Header */
+
+
 .hero {
     background-color: #34495e;
     position: fixed;
@@ -21,15 +22,15 @@ body {
     text-align: center;
     font-size: 20px;
     z-index: 1000;
-    height: 150px; /* Ensures navbar appears right below */
+    height: 150px; 
 }
 
 .profilePhoto{
     width: 80px;
     height: 80px;
-    border-radius: 50%; /* This makes it completely round */
-    object-fit: cover; /* This ensures the image covers the area without distortion */
-    border: 3px solid #ccc; /* Optional: adds a gray border */
+    border-radius: 50%; 
+    object-fit: cover;
+    border: 3px solid #ccc; 
     justify-content: left;
 }
 
@@ -42,10 +43,11 @@ body {
 }
 
 
+
 .navigationbar {
     background-color: #2c3e50; 
     position: fixed;
-    top: 170px;
+    top: 170px; 
     left: 0;
     width: 100%;
     color: white;
@@ -53,9 +55,10 @@ body {
     text-align: center;
     font-size: 18px;
     z-index: 500;
-   display: flex;
+    display: flex;
     flex-wrap: wrap;
 }
+
 
 nav ul {
     list-style-type: none;
@@ -86,11 +89,13 @@ nav ul li a {
     margin-left: auto;
 }
 
+
 section {
     scroll-margin-top: 195px; 
     padding: 20px;
 
 }
+
 
 .portfolio-grid {
     display: grid;
@@ -103,24 +108,24 @@ section {
     padding: 10px;
 }
 
-/* Skill Bar */
 .skill-bar {
     height: 10px;
     background-color: #3498db;
     margin: 5px 0;
 }
 
-/* Skills Section */
+
 #skills {
     text-align: center;
     margin: 20px auto;
 }
 
-/* Centered Canvas */
+
 canvas {
     margin: 0 auto;
     display: block;
 }
+
 
 @media screen and (max-width: 768px) {
     .navbar ul {
@@ -136,6 +141,7 @@ canvas {
         grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
     }
 }
+
 
 @media screen and (max-width: 360px) {
     .hero {
